fixing overflow html

--- a/styles.scss
+++ b/styles.scss
@@ -52,7 +52,11 @@ $min-computer: 1200px;
   }
 }
 
-
+html {
+  height:100%;
+  width: 100%;
+  overflow-x: hidden!important;
+}
 
 body {
   margin: 0px;
@@ -266,12 +270,15 @@ h2 {
       height: 100%;
       min-width: 100px;
     }
+    &__options {
+      margin: 0!important;
+    }
   }
 
   .acc__heros {
     justify-content: center !important;
     flex-direction: column !important;
-    margin-top: -50px!important;
+    padding-top: 70px !important;
 
     &__slide {
       flex-direction: column !important;
@@ -306,7 +313,7 @@ h2 {
       width: 100% !important;
 
       img {
-        width: 250px !important;
+        width: 200px !important;
       }
     }
   }
@@ -334,10 +341,13 @@ h2 {
       width: 20%;
       min-width: 220px;
     }
+    &__options {
+      margin: 0!important;
+    }
   }
 
   .acc__heros {
-    margin-top: 30px!important;
+    padding-top: 70px !important;
 
     &__description {
       padding-left: 15% !important;
@@ -379,7 +389,7 @@ h2 {
   flex-direction: row !important;
   justify-content: center;
   align-items: flex-start;
-  margin-top: 30px!important;
+  padding-top: 70px;
   
 
   .swiper-pagination-bullet {
